# gl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  frag.glsl  vert.glsl
lib/: application.cxx  hello.cxx  utils.cxx  window.cxx
